--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist",
+  "bin": {
+    "commag": "dist/index.js"
+  },
   "scripts": {
-    "dev": "npx ts-node ./src/index.ts",
+    "dev": "npx ts-node -r tsconfig-paths/register ./src/index.ts",
     "start": "node ./dist/index.js",
     "build": "tsc -p .",
     "clean": "rimraf dist coverage",
@@ -24,7 +27,9 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
-    "eslint": "^9.0.0",
+    "@typescript-eslint/type-utils": "^7.6.0",
+    "@typescript-eslint/utils": "^7.6.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
@@ -33,9 +38,14 @@
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "commander": "^12.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/jaronfort/comment-magic.git"
