--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "dev": "npx ts-node -r tsconfig-paths/register ./src/index.ts",
-    "start": "node ./dist/index.js",
-    "build": "tsc -p .",
+    "start": "node ./dist/src/index.js",
+    "build": "tsc -p . --outDir ./dist",
     "clean": "rimraf dist coverage",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -39,11 +39,12 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "boxen": "^7.1.1",
-    "chalk": "^5.3.0",
+    "chalk": "^4.0.0",
     "commander": "^12.0.0"
   },
   "repository": {
