--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
-          cache: yarn
+          node-version: 20
+          cache: pnpm
       - id: setup-env
         name: Setup Environment
         run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
