ci: fix access level in npm package

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          access: restricted
+          access: public
           check-version: true
 
       - if: steps.publish.outputs.type != 'none'
