--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/index.js",
   "types": "dist",
   "bin": {
-    "commag": "dist/index.js"
+    "commag": "dist/src/index.js"
   },
   "scripts": {
     "dev": "npx ts-node -r tsconfig-paths/register ./src/index.ts",
