--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "CommonJS",
-        "baseUrl": "./src",
+        "baseUrl": "./",
         "paths": {
             "@/*": [
-                "./*"
+                "./src/*"
             ]
         },
         "resolveJsonModule": true,
