build: add "files" to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "bin": {
     "commag": "dist/src/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "npx ts-node -r tsconfig-paths/register ./src/index.ts",
     "start": "node ./dist/src/index.js",
